Fix scrollbar styles when zoomed in

--- a/static/global.css
+++ b/static/global.css
@@ -238,8 +238,9 @@ main {
 
 ::-webkit-scrollbar-thumb {
   border: 4px solid rgba(0, 0, 0, 0);
-  background-clip: padding-box;
-  border-radius: 10px;
+  height: 56px;
+  background-clip: content-box;
+  border-radius: 8px;
   background-color: var(--scroll-thumb-color);
 }
 
